# api_project

./: .env  .env.example  pyproject.toml
src/: database.py  docker-compose.yml  main.py  test.db
src/auth/: email.py  models.py  routes.py  schemas.py  service.py
src/auth/templates/: index.html  reset_password.html  verify_email.html
src/conf/: config.py
src/contacts/: models.py  routes.py  schemas.py
src/docs/: conf.py  index.rst
src/docs/_build/doctrees/: environment.pickle  index.doctree
src/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/migrations/: env.py
src/migrations/versions/: 0db51669e51a_contacts.py  37b864a996a3_init.py  3c68e4a41ddd_re.py  4bd54f225ac5_init.py  52ca25eb76dc_add_email.py  a8ff8cd11f54_add_cont.py  dbbe929f652a_add.py  e4fd01171721_add_email.py
src/postgres-data/: postmaster.pid
src/postgres-data/base/1/: pg_internal.init
src/postgres-data/base/13481/: pg_internal.init
src/postgres-data/base/17564/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  13415  174  175  17565  17566  17570  17571  17573  (+251 more)
src/postgres-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
src/postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
src/postgres-data/pg_xact/: 0000
tests/: conftest.py  test.db  test_route_auth.py  test_route_contacts.py
(+617 files in other folders)
