[tool.poetry]
name = "api-project"
version = "0.1.0"
description = ""
authors = ["Oleksandr Arshynov <oleksandrarshynov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
bcrypt = "^3.2.0"
fastapi-mail = "^1.4.1"
libgravatar = "^1.0.4"
fastapi-limiter = "^0.1.6"
redis = "^5.0.3"
jinja2 = "^3.1.3"
cloudinary = "^1.39.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
